# project-align

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.debian  Dockerfile.redhat  Dockerfile.windows  LICENSE  README.md  TODO.md  core-game.code-workspace  docker-compose.yaml
.github/workflows/: cmake-multi-platform.yml  codeql.yml
3rdPartySoftware/: Furnace.ps1  Furnace.sh
game/: main.lua
include/: CMakelists.txt
include/engine/: GameEngine.h  Geometry.h  Physics.h  physics.hpp  vector2.hpp
include/engine/geometry/: line.hpp  point.hpp  polygon.hpp  rectangle.hpp  square.hpp
include/game/: Enemy.h  Game.h  Player.h
include/geometry/: Circle2D.hpp  Collision.hpp  Line2D.hpp  Point2D.hpp  Polygon.hpp  Vector2D.hpp
include/math/: Constants.hpp
include/physics/: PhysicsEngine.hpp
lib/: CMakeLists  CMakeLists.txt  CMakelists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists  CMakeLists.txt  CMakelists.txt  main.cpp
src/engine/: GameEngin.cpp  Geometry.cpp  Physic.cpp  physics.cpp  vecter2.cpp
src/engine/geometry/: line.cpp  point.cpp  polygon.cpp  rectangle.cpp  square.cpp
src/game/: Enemy.cpp  Game.cpp  Player.cpp  m.cpp
src/gameLogic/2d environment/: materialType.hpp
src/gameLogic/2d_environment/: materialType.cpp
src/gameObject/2d_environment/: map.hpp  materialType.hpp
src/gameObject/geometry/: geometry.hpp  grid.hpp
src/geometry/: geometry.cpp  geometry.h
src/gui/: screen.hpp
src/math/: coordinate_system.cpp  coordinate_system.h  geometry.cpp  geometry.h
src/physic/: Collision.cpp  Collision.hpp  DesVeloAng.cpp  DesVeloAng.hpp
src/randomID/: uniID.cpp  uniID.h
src/runtime/: Heartbeat.cpp  Heartbeat.hpp  PhysicRuntime.cpp  PhysicRuntime.hpp  TickSpeed.h  Wait.h  exitCode.cpp  exitCode.hpp
src/ui/: ui.cpp  ui.h
test/: CMakeLists  CMakelists.txt
tests/: CMakelists.txt  test.cpp
